--- a/contacts.html
+++ b/contacts.html
@@ -87,7 +87,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="services.html">Services</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="gallery-without-padding.html">Portfolio</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="portfolio.html">Portfolio</a>
                         <!-- RD Navbar Dropdown
                         <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="cobbles-gallery.html">Cobbles Gallery</a></li>
@@ -257,7 +257,7 @@
                   <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="overview.html">About</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="services.html">Services</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="gallery-without-padding.html">Portfolio</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="portfolio.html">Portfolio</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="testimonials.html">Testimonials</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="appointment.html">Appointment</a></li>
                   <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
