--- a/appointment.html
+++ b/appointment.html
@@ -86,7 +86,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="services.html">Services</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="gallery-without-padding.html">Portfolio</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="portfolio.html">Portfolio</a>
                         <!-- RD Navbar Dropdown
                         <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="cobbles-gallery.html">Cobbles Gallery</a></li>
