--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="services.html">Services</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="gallery-without-padding.html">Portfolio</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="portfolio.html">Portfolio</a>
                         <!-- RD Navbar Dropdown
                         <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="cobbles-gallery.html">Cobbles Gallery</a></li>
@@ -440,7 +440,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12"><a class="button button-primary" href="gallery-without-padding.html">View all</a></div>
+            <div class="col-12"><a class="button button-primary" href="portfolio.html">View all</a></div>
           </div>
         </div>
       </section>
@@ -629,7 +629,7 @@
                   <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="overview.html">About</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="services.html">Services</a></li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="gallery-without-padding.html">Portfolio</a></li>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="portfolio.html">Portfolio</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="testimonials.html">Testimonials</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="appointment.html">Appointment</a></li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a></li>
